--- a/ASSETS/CSS/styles.css
+++ b/ASSETS/CSS/styles.css
@@ -39,6 +39,11 @@ h1 {
   margin-bottom: 10px;
 }
 
+h3,
+h2 {
+  margin-bottom: 1.5rem;
+}
+
 .subtitle {
   color: #718096;
   font-size: 1rem;
@@ -134,6 +139,10 @@ select:focus,
 textarea:focus {
   outline: none;
   border-color: #3182ce;
+}
+
+textarea {
+  resize: none;
 }
 
 .btn {
@@ -357,21 +366,6 @@ tr:hover {
   color: #6c757d;
 }
 
-.order-summary {
-  margin-bottom: 1rem;
-  background: #f1f5f9;
-  padding: 0.5rem;
-}
-
-textarea {
-  resize: none;
-}
-
-h3,
-h2 {
-  margin-bottom: 1rem;
-}
-
 .confirm {
   display: flex;
   gap: 1.5rem;
@@ -384,6 +378,45 @@ h2 {
   font-weight: 500;
   align-self: center;
   margin-bottom: 1rem;
+}
+
+.danger-zone {
+  margin-top: 2rem;
+  border: 1px solid #e53e3e;
+  padding: 2rem;
+  border-radius: 12px;
+  background-color: #fff5f5;
+}
+
+.danger-zone h3 {
+  color: #e53e3e;
+}
+
+.danger-zone p {
+  font-size: 0.85rem;
+  color: #718096;
+  margin-bottom: 1.5rem;
+}
+
+.btn-danger-outline {
+  background: white;
+  color: #e53e3e;
+  border: 1px solid #e53e3e;
+}
+
+.btn-danger-outline:hover {
+  background: #e53e3e;
+  color: white;
+}
+
+.btn-danger-all {
+  background: #e53e3e;
+  color: white;
+}
+
+.btn-danger-all:hover {
+  border: 1px solid white;
+  /* font-size: 1.5rem; */
 }
 
 /* MEDIA QUERIES */
@@ -411,6 +444,7 @@ h2 {
 
   .empty-table {
     padding: 1.5rem;
+    text-align: start;
   }
 
   h1 {
